Added test mode

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,9 @@
 [SETTINGS]
 cataloguers = ["Fill a list of cataloguer names here whose changes in records are neglected"]
 
+[ISNI ATOMPUB TEST API]
+baseurl = #Insert ISNI AtomPub test API URL here
+
 [ISNI ATOMPUB API]
 baseurl = #Insert ISNI AtomPub API URL here
 
