Refactored and improved API querying

--- a/tests/config.ini
+++ b/tests/config.ini
@@ -2,3 +2,7 @@
 cataloguers = ["ISNI-TEST"]
 max_titles = 10
 
+[SRU API]
+baseurl = http:xxxxx.xxxx
+parameters = {"operation": "searchRetrieve"}
+timeout = 1
